fix gap under comments textarea

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -460,6 +460,7 @@ div.subject-timeline
     margin: 0
     padding: 0
     border: none
+    display: block
   
   button
     text-align: center
